# bookworm

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/corpus/: device-config.txt  manifest.json  operations.md
docs/: configuration.md  spec.md  technical.md
src/digester/: __init__.py  __main__.py  benchmark.py
src/digester/core/: __init__.py  artifacts.py  chunking.py  models.py  orchestrator.py  presets.py  prompts.py
src/digester/images/: __init__.py  base.py  factory.py  mock_image_analyzer.py  ollama_image_analyzer.py  openai_image_analyzer.py
src/digester/interfaces/: __init__.py  api.py  cli.py
src/digester/providers/: __init__.py  base.py  factory.py  mock_llm_provider.py  ollama_provider.py  openai_compatible.py  openai_provider.py  opencode_go_provider.py  parsing.py  schemas.py
src/digester/sources/: __init__.py  base.py  docx.py  embedded_images.py  pdf.py  registry.py  spreadsheet.py  text.py
src/digester/utils/: __init__.py  progress.py
tests/: test_benchmark.py  test_chunking.py  test_cli.py  test_images.py  test_pipeline.py  test_presets.py  test_prompts.py  test_providers.py  test_sources.py
